# dAdvisor

./: .gitignore  CMakeLists.txt  Makefile  README.md  dadvisor.py
core/: container.py  guest.py  kvm.py  virtualbox.py
ex/: client.cpp  demo.cpp  server.cpp  simplemonitor.cpp  snort.cpp  usage.cpp
include/: cgroup.h  config.h  container.h  dadvisor.h  guest.h  lprocess.h  machine.h  monitor.h  utils.h
node/: client.cpp  master.cpp  nat.cpp  sipp.cpp
policy/: monitor.py
priv/: load_1.sh  log.py  uac.xml  uac_invite.xml  uac_loop.xml  uas.xml  uas_invite.xml
src/: cgroup.cpp  container.cpp  guest.cpp  lprocess.cpp  monitor.cpp  utils.cpp
test/: cgroup_test.cpp  client.cpp  container_test.cpp  demo.cpp  lprocess_test.cpp  server.cpp  snort.cpp  util_test.cpp
